--- a/SignalRChatClient/MainWindow.xaml
+++ b/SignalRChatClient/MainWindow.xaml
@@ -1,42 +1,146 @@
 ﻿<Window x:Class="SignalRChatClient.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Chat Client" Height="350" Width="400">
+        xmlns:local="clr-namespace:SignalRChatClient"
+        Title="Chat Client" 
+        WindowStartupLocation="CenterScreen"
+        Height="650" 
+        Width="850">
+
+    <Window.DataContext>
+        <local:MainWindowViewModel/>
+    </Window.DataContext>
     
     <Grid Margin="10">
 
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
 
-        <TextBlock Grid.Row="0" 
-                   Text="Name"/>
-        <TextBox Grid.Row="1" 
-                 x:Name="UserTextBox" 
-                 Margin="0,0,0,5"/>
+        <!--TOOLBAR-->
+        <Border Grid.Row="0"
+                Grid.Column="0"
+                Grid.ColumnSpan="3"
+                BorderBrush="SteelBlue"
+                BorderThickness="0,0,0,1"
+                Margin="2,2,2,5"
+                Padding="0,0,0,2">
 
-        <TextBlock Grid.Row="2" 
-                   Text="Message"
-                   Margin="0,10,0,0"/>
-        <TextBox Grid.Row="3"    
-                 x:Name="MessageTextBox" Margin="0,0,0,5"/>
+            <Grid>
+                
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <TextBlock Text="Name:"
+                           FontSize="14"
+                           VerticalAlignment="Center"/>
+
+                <TextBox Grid.Column="1"
+                         Width="250"
+                         Margin="5,0,2,2"
+                         FontSize="14"
+                         VerticalContentAlignment="Center"
+                         Text="{Binding Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+
+                <Button Grid.Column="2" 
+                        Content="Connect"
+                        Command="{Binding ConnectCommand}"
+                        HorizontalAlignment="Left"
+                        Height="32"
+                        Width="85"
+                        Margin="0,0,2,2"/>
+
+                <Button Grid.Column="3" 
+                        Content="Disconnect"
+                        Command="{Binding DisconnectCommand}"
+                        HorizontalAlignment="Left"
+                        Height="32"
+                        Width="85"
+                        Margin="0,0,2,2"/>
+            </Grid>
+
+        </Border>
         
-        <Button Grid.Row="4" 
-                Content="Send"
-                Height="28"
-                Width="75"
-                HorizontalAlignment="Left"
-                Click="SendButton_Click" 
-                Margin="0,0,0,10"/>
-        
-        <ListBox Grid.Row="5" 
-                 x:Name="MessagesList"/>
-        
+        <!--LEFT SIDE-->
+        <Grid Grid.Row="1"
+              Grid.Column="0">
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+
+            <TreeView MinWidth="150"
+                      Margin="2">
+            </TreeView>
+
+            <Border Grid.Row="1">
+
+                <StackPanel Orientation="Horizontal"
+                            HorizontalAlignment="Center">
+
+                    <Button Content="Add"
+                            Command="{Binding AddGroupCommand}"
+                            Height="22"
+                            Width="65"
+                            HorizontalAlignment="Left"
+                            Margin="2,0,0,2"/>
+
+                    <Button Content="Remove"
+                            Command="{Binding RemoveGroupCommand}"
+                            Height="22"
+                            Width="65"
+                            HorizontalAlignment="Left"
+                            Margin="2,0,0,2"/>
+
+                </StackPanel>
+
+            </Border>
+
+        </Grid>
+            
+
+        <!--SPLITTER-->
+        <GridSplitter Grid.Row="1"
+                      Grid.Column="1"
+                      Width="3"
+                      Margin="0,2,0,2"
+                      Background="#FFABADB3"
+                      HorizontalAlignment="Stretch"
+                      VerticalAlignment="Stretch"/>
+
+        <!--CONTENT-->
+            <Grid Grid.Row="1"
+                  Grid.Column="2">
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+
+                <RichTextBox Grid.Row="0"
+                             FontSize="14"
+                             IsReadOnly="True"
+                             Margin="2,2,2,0">
+                    
+                </RichTextBox>
+                
+                <TextBox Grid.Row="2"
+                         Margin="2"
+                         FontSize="14"
+                         Padding="2"/>
+
+            </Grid>
     </Grid>
     
 </Window>
